--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
-<html> 
+<html>
+<head>
+  <title> Amy Tang </title>
+</head>
 
 <body>
-"Hello World. This is a test."
+  <h1> Amy Tang </h1>
+
+  <div class="navbar">
+    <a href="index.html">home</a>
+    <a href="projects.html">projects</a>
+    <!-- <a href="publications.html">publications</a> -->
+    <a href="research.html">research experience</a>
+    <div>
+      <button class="dropbtn">interests
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="interest-content">
+        <a href="UWH.html">underwater hockey</a>
+        <a href="art.html">art & photography</a>
+        <a href="chinese.html">chinese blog</a>
+      </div>
+    </div>
+    <a href="contactme.html">contact me</a>
+  </div>
+
+  <br>
+
+  <h2> About Me </h2>
+  <p> I am 19 year-old inspiring reseacher interested in both biology and software analysis of data generated from experiments, especially cell imaging. I have basic Java and Python experience, and I currently am learning R and Linux.</p>
+  <p> Right now, I am currently a first-year studying Computer Science and Biology as a Combined B.S. major at Northeastern University in Boston, MA.</p>
+  <p> In my free time, I work on side projects to learn and practice coding with different languages as well as read research papers in fields I'm interested in. I also play underwater hockey (<a href="UWH.html">check it out here!</a>), am working on improving my photography skills, and learning Mandarin.</p>
+
+  <br>
+
+  <h3> Stay Connected </h3>
+  <a href="https://www.linkedin.com/in/amy-tang">
+    <img src="images/logos/linkedin-logo.png" alt="">
+    Connect with me on LinkedIn</a>
+  <a href="http://www.github.com/tang-amy">
+    <img src="images/logos/github-logo.png" alt = "">
+    Check out my Github</a>
+  <a href="mailto:tang.amy@husky.neu.edu">
+    <img src="images/logos/email.jpeg" alt="">
+    Email me</a>
+
+
 </body>
 
 </html>
