--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="chinese.html">chinese blog</a>
       </div>
     </div>
-    <a href="contactme.html">contact me</a>
+    <a href="contact-me.html">contact me</a>
   </div>
 
   <br>
