basic layout/html code for all links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="projects.html">projects</a>
     <!-- <a href="publications.html">publications</a> -->
     <a href="research.html">research experience</a>
+    <!-- <a href="resume.html">resume</a> -->
     <div>
       <button class="dropbtn">interests
         <i class="fa fa-caret-down"></i>
@@ -22,7 +23,7 @@
         <a href="chinese.html">chinese blog</a>
       </div>
     </div>
-    <a href="contact-me.html">contact me</a>
+    <a href="contact-me.html">contact me</a>+
   </div>
 
   <br>
@@ -34,17 +35,33 @@
 
   <br>
 
+<!-- stick all of this into some footer of some kind -->
   <h3> Stay Connected </h3>
   <a href="https://www.linkedin.com/in/amy-tang">
     <img src="images/logos/linkedin-logo.png" alt="">
     Connect with me on LinkedIn</a>
   <a href="http://www.github.com/tang-amy">
     <img src="images/logos/github-logo.png" alt = "">
-    Check out my Github</a>
+    Check out my GitHub</a>
   <a href="mailto:tang.amy@husky.neu.edu">
     <img src="images/logos/email.jpeg" alt="">
     Email me</a>
 
+  <h3> Resume PDF </h3>
+  <a href="resume.pdf">
+    <img src="images/logos/pdf-logo.png">
+    View/Download PDF version of resume </a>
+
+  <h3> Site Map </h3>
+  <a href="index.html">home</a>
+  <a href="projects.html">projects</a>
+  <!-- <a href="publications.html">publications</a> -->
+  <a href="research.html">research experience</a>
+  <a href="resume.html">resume</a>
+  <a href="interests.html">interests</a>
+  <a href="contact-me.html">contact</a>
+
+  <p> Copyright 2018 by Amy Tang... so on so on ... </p>
 
 </body>
 
