fixed broken link

--- a/r-learning.html
+++ b/r-learning.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <h1> Research Learnings and Interests</h1>
+  <h1> Research Learnings </h1>
 
   <!-- figure out how to update all of this by linking 1 single navbar so it is not copy and pasted -->
       <div class="navbar">
