--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <h1> Research Learnings and Interests</h1>
+  <h1> Research Experience, Learnings, and Interests</h1>
 
   <!-- figure out how to update all of this by linking 1 single navbar so it is not copy and pasted -->
       <div class="navbar">
@@ -30,8 +30,8 @@
       <div class="research-navbar">
         <!-- eventually add a scroll up button -->
         <a href="research.html">research home</a>
-        <a href="learnings.html">learnings</a>
-        <a href="interests.html">interests</a>
+        <a href="r-learnings.html">learnings</a>
+        <a href="r-interests.html">interests</a>
       </div>
 
       <h2> Experiences </h2>
