added 2 new links

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="navbar">
     <a href="index.html">home</a>
     <a href="projects.html">projects</a>
-    <!-- <a href="publications.html">publications</a> -->
+    <a href="publications.html">publications</a>
     <a href="research.html">research experience</a>
-    <!-- <a href="resume.html">resume</a> -->
+    <a href="resume.html">resume</a>
     <div>
       <button class="dropbtn">interests
         <i class="fa fa-caret-down"></i>
