--- a/art.html
+++ b/art.html
@@ -2,28 +2,34 @@
 <html>
 <head>
   <title> ATang Photography & Art</title>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body>
   <h1> Photography, Art, and Design </h1>
 
-  <div class="navbar">
-    <a href="index.html">home</a>
-    <a href="projects.html">projects</a>
-    <!-- <a href="publications.html">publications</a> -->
-    <a href="research.html">research experience</a>
-    <!-- <a href="resume.html">resume</a> -->
-    <div>
-      <button class="dropbtn">interests
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="interest-content">
-        <a href="UWH.html">underwater hockey</a>
-        <a href="art.html">art & photography</a>
-        <a href="chinese.html">chinese blog</a>
-      </div>
-    </div>
-    <a href="contact-me.html">contact me</a>+
-  </div>
+  <!-- Navigation bar code starts-->
+    <div id="nav-bar-placeholder"> </div>
+
+    <script type="text/javascript">
+    $(function(){
+      $("#nav-bar-placeholder").load("nav-bar.html");
+    });
+    </script>
+  <!-- Navaigation bar code ends -->
 
 <p> figure out the slideshow thingy. this page is still under construction </p>
+
+<!-- Footer code starts -->
+<div id="footer-placeholder"> </div>
+
+<script type="text/javascript">
+$(function(){
+  $("#footer-placeholder").load("footer.html");
+});
+</script>
+}
+<!-- Footer code ends -->
+
+</body>
+</html>
