--- a/chinese.html
+++ b/chinese.html
@@ -2,36 +2,31 @@
 <html>
 <head>
   <title> ATang Chinese Blog </title>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body>
   <!-- issue with how chinese is displayed :( -->
   <div lang="zh-Hans"> <h1> Blog 博客 </h1> </div>
 
-  <!-- figure out how to update all of this by linking 1 single navbar so it is not copy and pasted -->
-      <div class="navbar">
-        <a href="index.html">home</a>
-        <a href="projects.html">projects</a>
-        <!-- <a href="publications.html">publications</a> -->
-        <a href="research.html">research experience</a>
-        <div>
-          <button class="dropbtn">interests
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="interest-content">
-            <a href="UWH.html">underwater hockey</a>
-            <a href="art.html">art & photography</a>
-            <a href="chinese.html">chinese blog</a>
-          </div>
-        </div>
-        <a href="contact-me.html">contact me</a>+
-      </div>
+  <!-- Navigation bar code starts-->
+    <div id="nav-bar-placeholder"> </div>
 
-      <div class="chinese-navbar">
-        <h3> Blog Posts Listed by Year
-      <a href="chinese.html">2018</a>
-      <a href='#'>theoretical nonexisting older posts</a>
-    </div>
+    <script type="text/javascript">
+    $(function(){
+      $("#nav-bar-placeholder").load("nav-bar.html");
+    });
+    </script>
+  <!-- Navaigation bar code ends -->
+
+  <!-- chinese nav bar code starts -->
+  <div id="chinese-nav-bar-placeholder"></div>
+
+  <script type="text/javascript">
+  $(function(){
+    $("#chinese-nav-bar-placeholder").load("nav-bar.html");
+  });
+  </sccript>
 
     <!-- display newest entry first -->
 
@@ -42,6 +37,17 @@
     <h2> Date blah blah blah </h2>
     <p> Start writing lalalalalala </p>
     <p> Aim for 2 paragraphs? </p>
+
+    <!-- Footer code starts -->
+    <div id="footer-placeholder"> </div>
+
+    <script type="text/javascript">
+    $(function(){
+      $("#footer-placeholder").load("footer.html");
+    });
+    </script>
+    }
+    <!-- Footer code ends -->
 
   </body>
 </html>
