--- a/footer.html
+++ b/footer.html
@@ -46,7 +46,7 @@
     </div>
 
   <div class="copyright">
-    <p> Copyright &copy; 2018 by Amy Tang... so on so on (i dont know my actal rights)... </p>
+    <p> Copyright &copy; 2018 by Amy Tang.</p>
   </div>
 
 </footer>
