--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <div class="container">
+    <div class="header">
   <h1> Amy Tang </h1>
   <!-- Navigation bar code starts-->
   <div id="nav-bar-placeholder"> </div>
@@ -18,24 +19,27 @@
     });
     </script>
   <!-- Navaigation bar code ends -->
-
-  <div class="intro">
-    <div class="intro-header"> <h2> About Me </h2> </div>
-    <div class="intro-text">
+</div>
+<div class="main">
+  <div class="img-bg-page">
+    <div class="bg-img"><img src="images/backgrounds/Westwood-Traintracks-noir.jpg"
+      alt="Photograph of Train Tracks in Hometown with Noir filter"></div>
+  <div class="introduction">
+    <h2>About Me</h2>
       <p> I am 19 year-old inspiring reseacher interested in both biology and software
         analysis of data generated from experiments, especially cell imaging. I have
          basic Java and Python experience, and I am currently learning R and Linux.</p>
-      </br>
       <p> Right now, I am a first-year studying Computer Science and Biology as a
         Combined B.S. major at Northeastern University in Boston, MA.</p>
-      </br>
       <p> In my free time, I work on side projects to learn and practice coding with
         different languages as well as read research papers in fields I'm interested
          in. I also play underwater hockey (<a href="UWH.html">check it out here!</a>),
          am working on improving my photography skills, and learning Mandarin.</p>
-      </div>
    </div>
+ </div>
+</div>
 
+<div class="footer">
   <!-- Footer code starts -->
   <div id="footer-placeholder"> </div>
 
@@ -45,6 +49,7 @@
   });
   </script>
   <!-- Footer code ends -->
+</div>
 </div>
 </body>
 
