--- a/publications.html
+++ b/publications.html
@@ -3,9 +3,12 @@
 <head>
   <title> ATang Publications </title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+  <div class="container">
+    <div class="header">
   <h1> Publications </h1>
 
 <!-- Navigation bar code starts-->
@@ -17,9 +20,22 @@
   });
   </script>
 <!-- Navaigation bar code ends -->
+</div>
+<div class="main">
+  <div class="special-paragraph">
+      <h2> Listing of Publications </h2>
+      <p> Here, I will list published research papers where I am a co-author as well
+        as give a brief description of my contribution to the paper. The papers will be listed
+        from most current to oldest. </p>
+</div>
 
-      <p> No publications yet. Two pending publications where I am listed as co-author. </p>
+<div class="paragraph">
+</br> </br>
+  <p> No publications yet. Two pending publications where I am listed as co-author. </p>
+</div>
 
+</div>
+<div class="footer">
       <!-- Footer code starts -->
       <div id="footer-placeholder"> </div>
 
@@ -28,9 +44,9 @@
         $("#footer-placeholder").load("footer.html");
       });
       </script>
-      }
       <!-- Footer code ends -->
-
+</div>
+</div>
     </body>
 
     </html>
