--- a/r-learning.html
+++ b/r-learning.html
@@ -3,9 +3,12 @@
 <head>
   <title> ATang Research Learning </title>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+  <div class="container">
+    <div class="header">
   <h1> Research Learnings </h1>
 
   <!-- Navigation bar code starts-->
@@ -17,24 +20,20 @@
     });
     </script>
   <!-- Navaigation bar code ends -->
+</div>
 
-  <!-- Ressearch navigation bar code starts-->
-    <div id="research-nav-bar-placeholder"> </div>
-
-    <script type="text/javascript">
-    $(function(){
-      $("#research-nav-bar-placeholder").load("research-nav-bar.html");
-    });
-    </script>
-  <!-- Research navaigation bar code ends -->
-
+<div class="main">
+  <div class="paragraph">
       <h2> HRM Genotyping </h2>
       <p> blah blah blah blah blah </p>
       <p> as this gets longer/more filled, most likely will be beneficial to have some sort of sorting system on this page
         instead and then have these posts on their own html page </p>
       <p> blah blah blah </p>
       <p> <a href="#">PDF ver of info avaliable as download + little PDF symbol<a> </p>
+</div>
+</div>
 
+<div class="footer">
         <!-- Footer code starts -->
         <div id="footer-placeholder"> </div>
 
@@ -43,9 +42,9 @@
           $("#footer-placeholder").load("footer.html");
         });
         </script>
-        }
         <!-- Footer code ends -->
-
+</div>
+</div>
       </body>
 
       </html>
