--- a/resume.html
+++ b/resume.html
@@ -3,10 +3,13 @@
 <head>
   <title> ATang Publications </title>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <h1> Publications </h1>
+  <div class="container">
+    <div class="header">
+  <h1> Resume </h1>
 
   <!-- Navigation bar code starts-->
     <div id="nav-bar-placeholder"> </div>
@@ -17,8 +20,14 @@
     });
     </script>
   <!-- Navaigation bar code ends -->
+</div>
+<div class="main">
+  <div class="paragraph">
+      <p> Online version of resume. Will be posted at a later date. </p>
+    </div>
+  </div>
 
-      <p> Online version of resume (allows for more details/styling than a single page PDF). Still under construction.</p>
+<div class="footer">
 
       <!-- Footer code starts -->
       <div id="footer-placeholder"> </div>
@@ -28,9 +37,9 @@
         $("#footer-placeholder").load("footer.html");
       });
       </script>
-      }
       <!-- Footer code ends -->
-
+</div>
+</div>
     </body>
 
     </html>
