--- a/art.html
+++ b/art.html
@@ -3,9 +3,13 @@
 <head>
   <title> ATang Photography & Art</title>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="slideshow.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body onload="showSlides(1)">
+  <div class="container">
+    <div class="header">
   <h1> Photography, Art, and Design </h1>
 
   <!-- Navigation bar code starts-->
@@ -17,9 +21,57 @@
     });
     </script>
   <!-- Navaigation bar code ends -->
+</div>
 
+<div class="main">
+
+  <div class="special-paragraph">
 <p> figure out the slideshow thingy. this page is still under construction </p>
+</div>
 
+</br> </br>
+
+<div class="photoshow">
+    <h2> Photographs </h2>
+  </br>
+        <div class="slideshow-container">
+        <div class="slideshow-img fade">
+          <img src="images/uwh-photos/IMG_4700.JPG">
+          <div class="text">Placeholder Image 1</div> </div>
+        <div class="slideshow-img fade">
+          <img src="images/uwh-photos/IMG_4854.JPG">
+          <div class="text">Placeholder Image 2</div></div>
+        <div class="slideshow-img fade">
+            <img src="images/uwh-photos/IMG_8148.JPG">
+            <div class="text">Placeholder Image 3</div></div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+  </br>
+  <div class="dots">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+</div>
+
+
+  <div class="list">
+    <h2>Archives</h2>
+    <p> This is a complete list of all of the different categories of photos and article
+      that I have taken and drawn organized by category. Find the location or topic that
+      interests you. </p>
+      <ul>
+        <li><a href='#'>Category 1</a></li>
+        <li><a href='#'>Category 2</a></li>
+        <li><a href='#'>Category 3</a></li>
+        <li><a href='#'>Category 4</a></li>
+        <li><a href='#'>Category 5</a></li>
+      </ul>
+    </div>
+  </div>
+<div class="footer">
 <!-- Footer code starts -->
 <div id="footer-placeholder"> </div>
 
@@ -28,8 +80,8 @@ $(function(){
   $("#footer-placeholder").load("footer.html");
 });
 </script>
-}
 <!-- Footer code ends -->
-
+</div>
+</div>
 </body>
 </html>
