--- a/nav-bar.html
+++ b/nav-bar.html
@@ -6,7 +6,13 @@
 
     <li class="option"><a href="publications.html">publications</a></li>
 
-    <li class="option"><a href="research.html">research</a></li>
+    <li class="dropdown"><a href="javascript:void(0)" class="dropdn-btn">research</a>
+      <div class="dropdn-content">
+        <a href="research.html">research home</a>
+        <a href="r-learning.html">learnings</a>
+        <a href="r-interests.html">interests</a>
+      </div>
+    </li>
 
     <li class="dropdown">
       <a href="javascript:void(0)" class="dropdn-btn">interests</a>
